[project]
name = "sslpsk"
description = "sslpsk"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["ssl", "tls", "psk", "tls-psk", "preshared key"]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "Kuba Szczodrzyński", email = "kuba@szczodrzynski.pl" }
]
maintainers = [
    { name = "beremiz", email = "github.actions@beremiz.fr" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
version = "1.0.3"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/beremiz/sslpsk"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
